@@ -122,5 +122,7 @@ $arrLangModule = array(
 'Manage Forms'=>'Administrar Formularios',
 'External URLs' => 'URLs Externos',
 'Manage External URLs' => 'Administrar URLs Externos',
+'At least 1 used channel must be allowed.' => 'Se debe permitir el uso de al menos 1 canal.',
+'Campaign must allow at least one call retry' => 'Campaña debe permitir al menos un intento de llamada',
 );
 ?>
