@@ -1,3 +1,4 @@
+* Campaign Out: do not allow creation of campaigns with 0 retries.
 * Agent Console: expose selection of attended call transfer via "atxfercall"
   command.
 * Dialer: fix broken recovery on database loss due to dangling connection in
